--- a/inside-deep-learing/01-foundational-methods/02_automatic_differentiation.ipynb
+++ b/inside-deep-learing/01-foundational-methods/02_automatic_differentiation.ipynb
@@ -6,7 +6,7 @@
       "name": "02-automatic-differentiation.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP6is8/nmnMHCW1vQ0DIaaX",
+      "authorship_tag": "ABX9TyN/dlbgCiG+wp1KXWdIrerJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,10 +92,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 283
+          "height": 282
         },
         "id": "I5WaLFWb-hR0",
-        "outputId": "3914f819-014c-49c8-ded1-a018fdf17b4e"
+        "outputId": "8cc7640b-b765-4289-c181-d26e3d5a6319"
       },
       "execution_count": 3,
       "outputs": [
@@ -103,7 +103,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f17802e8c50>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f527d0c51d0>"
             ]
           },
           "metadata": {},
@@ -157,10 +157,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 283
+          "height": 282
         },
         "id": "thAf7OsQEBod",
-        "outputId": "877ae1e3-8727-4861-cc84-7b6884f4ff7c"
+        "outputId": "8a655924-859a-475b-cfc2-db8fb47ebbad"
       },
       "execution_count": 5,
       "outputs": [
@@ -168,7 +168,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f177f988a10>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f51ac251fd0>"
             ]
           },
           "metadata": {},
@@ -210,9 +210,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A_kMTtExGYp7",
-        "outputId": "d258203f-c886-47b1-eab5-a84f0239c7c6"
+        "outputId": "a77ec923-b74e-48eb-f3e0-42327f77a5e1"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,9 +235,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0AzaN07lGfeH",
-        "outputId": "50db70d0-9aee-4ee0-cf40-c612830d0d81"
+        "outputId": "fc9192c8-96f0-4a4b-cfb3-4a03d7d2dfce"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,9 +260,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bYAXv4E2HUWj",
-        "outputId": "e839b44a-1c8e-4f9d-97a9-aeeed0f0e0ea"
+        "outputId": "6662b0ea-2541-408e-fe29-0992e711d470"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,15 +283,168 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "Notice that when we define a PyTorch Tensor object, it has a child member\n",
+        "`.grad` that stores the computed gradients for that variable, as well as a `.data` member that holds the underlying value."
       ],
       "metadata": {
-        "id": "R07-0XykHv-F"
+        "id": "x7hFErJzHQ_l"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = torch.tensor([-3.5], requires_grad=True)\n",
+        "\n",
+        "x_cur = x.clone()\n",
+        "x_prev = x_cur * 100\n",
+        "\n",
+        "epsilon = 1e-5\n",
+        "eta = 0.1\n",
+        "\n",
+        "while torch.linalg.norm(x_cur - x_prev) > epsilon:\n",
+        "  x_prev = x_cur.clone()\n",
+        "\n",
+        "  # compute gradient, and update\n",
+        "  value = f(x)\n",
+        "  value.backward()\n",
+        "  x.data -= eta * x.grad\n",
+        "\n",
+        "  # Zeros out the old gradient\n",
+        "  x.grad.zero_()\n",
+        "\n",
+        "  # Accesses .data to avoid autograd mechanics\n",
+        "  x_cur = x.data\n",
+        "\n",
+        "print(x_cur)"
+      ],
+      "metadata": {
+        "id": "R07-0XykHv-F",
+        "outputId": "e3343cbe-edb5-4090-838c-73dbc32a9b0f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([2.0000])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "What we just did, finding the minimum of a function `f(.)`, is called optimization."
+      ],
+      "metadata": {
+        "id": "WNOngqYoJaOT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Optimizing parameters"
+      ],
+      "metadata": {
+        "id": "JA2AArK8KR_4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Because we specify the goal of our network using a loss function `l(.)`, we can optimize `f(.)` to minimize our loss. If we reach a loss `(.) = 0`, our network appears to have solved the problem.\n",
+        "\n",
+        "This is why we care about optimization and is foundational to how most modern neural networks are trained today.\n",
+        "\n",
+        "Because of how important optimization is, PyTorch includes two additional concepts to help us: parameters and optimizers.\n",
+        "\n",
+        "A Parameter of a model is a value that we alter using an Optimizer to try to reduce our loss `l(.)`."
+      ],
+      "metadata": {
+        "id": "4tyYIfZEKS2a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_param = torch.nn.Parameter(torch.tensor([-3.5]), requires_grad=True)"
+      ],
+      "metadata": {
+        "id": "g_zT_MylKqD7"
+      },
+      "execution_count": 11,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "But now we can create an Optimizer object."
+      ],
+      "metadata": {
+        "id": "1Tf59ku1L4s2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# we pass x_param to adjust\n",
+        "optimizer = torch.optim.SGD([x_param], lr=eta)"
+      ],
+      "metadata": {
+        "id": "Dd6Emg6hL5IC"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we can rewrite the previous ugly loop into something cleaner."
+      ],
+      "metadata": {
+        "id": "JdH2qHxtNSZa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for epoch in range(60):\n",
+        "  # do cleanup manually before for every parameter passed in as an input\n",
+        "  optimizer.zero_grad()   # just like x.grad.zero_()\n",
+        "\n",
+        "  # do forward pass\n",
+        "  loss_incurred = f(x_param)\n",
+        "  # compute loss using backward pass\n",
+        "  loss_incurred.backward()\n",
+        "\n",
+        "  # perform optimization\n",
+        "  optimizer.step()       # just like x.data -= eta * x.grad\n",
+        "\n",
+        "print(x_param.data)"
+      ],
+      "metadata": {
+        "id": "rTMx-FSWNTG_",
+        "outputId": "7d70694f-93f9-47c3-83ef-d5041968fa4b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([2.0000])\n"
+          ]
+        }
+      ]
     }
   ]
 }
