--- a/inside-deep-learing/02-fully-connected-networks/03_better_neural_network_training.ipynb
+++ b/inside-deep-learing/02-fully-connected-networks/03_better_neural_network_training.ipynb
@@ -6,7 +6,7 @@
       "name": "03-better-neural-network-training.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOCbYf2eG9DvKbXGUrPejzY",
+      "authorship_tag": "ABX9TyMJ8vLO+0ZYY3mlpvBhjZ2a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -323,6 +323,71 @@
     {
       "cell_type": "code",
       "source": [
+        "def train_model(model, optimizer, data_loader, loss_func, device=\"cpu\", results, score_funcs, prefix=\"\", desc=None):\n",
+        "  running_loss = []\n",
+        "  y_true = []\n",
+        "  y_pred = []\n",
+        "  start = time.time()\n",
+        "\n",
+        "  # iterating through all the inputs (features) and labels (target)\n",
+        "  for inputs, labels in tqdm(data_loader, desc=desc, leave=False):\n",
+        "    # Move the batch of data to the device we are using\n",
+        "    inputs = move_to(inputs, device)\n",
+        "    labels = move_to(labels, device)\n",
+        "\n",
+        "    # perform the prediction\n",
+        "    y_hat = model(inputs)\n",
+        "\n",
+        "    # Compute loss\n",
+        "    loss = loss_func(y_hat, labels)\n",
+        "\n",
+        "    if model.training:\n",
+        "      # compute the gradient\n",
+        "      loss.backward()\n",
+        "      # Now we just need to update all the parameters\n",
+        "      optimizer.step()\n",
+        "      optimizer.zero_grad()\n",
+        "\n",
+        "    # Now we are just grabbing some information we would like to have\n",
+        "    running_loss.append(loss.item())\n",
+        "\n",
+        "    # Finally, we need to store the labels and predictions\n",
+        "    if len(score_funcs) > 0 and isinstance(labels, torch.Tensor):\n",
+        "      # moving labels & predictions back to CPU for computing / storing predictions\n",
+        "      labels = labels.detach().cpu().numpy()\n",
+        "      y_hat = y_hat.detach().cpu().numpy()\n",
+        "      # add to predictions so far\n",
+        "      y_true.extend(labels.tolist())\n",
+        "      y_pred.extend(y_hat.tolist())\n",
+        "\n",
+        "  # end training epoch\n",
+        "   end = time.time()\n",
+        "\n",
+        "  y_pred = np.asarray(y_pred)\n",
+        "  # We have a classification problem, convert to labels\n",
+        "  if len(y_pred.shape) == 2 and y_pred.shape[1] > 1:\n",
+        "    y_pred = np.argmax(y_pred, axis=1)\n",
+        "  \n",
+        "  # Else, we assume we are working on a regression problem\n",
+        "  results[prefix + \" loss\"].append(np.mean(running_loss))\n",
+        "  for name, score_func in score_funcs.items():\n",
+        "    try:\n",
+        "      results[prefix + \" \" + name].append(score_func(y_true, y_pred))\n",
+        "    except:\n",
+        "      results[prefix + \" \" + name].append(float(\"NaN\"))\n",
+        "\n",
+        "  # return time spent on epoch\n",
+        "  return end - start"
+      ],
+      "metadata": {
+        "id": "dk1S1LwtTqln"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def train_network(model, loss_func, data_loader, epochs=20, device=\"cpu\"):\n",
         "  # create the SGD optimizer\n",
         "  optimizer = torch.optim.SGD(model.parameters(), lr=0.001)\n",
@@ -362,7 +427,7 @@
         "      running_loss += loss.item()"
       ],
       "metadata": {
-        "id": "dk1S1LwtTqln"
+        "id": "xDXB5JaWX1OU"
       },
       "execution_count": null,
       "outputs": []
