--- a/inside-deep-learing/05-modern-training-techniques/02_learning_rate_schedules.ipynb
+++ b/inside-deep-learing/05-modern-training-techniques/02_learning_rate_schedules.ipynb
@@ -6,7 +6,7 @@
       "name": "02-learning-rate-schedules.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOxAiKKGmQKvBEJGF+ye8Dr",
+      "authorship_tag": "ABX9TyOKjaY/ckHz18pcQgMM+6Bj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -673,6 +673,75 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Learning rate schedules"
+      ],
+      "metadata": {
+        "id": "2ubX67aYhvSp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now let’s talk about ways to implement the learning rate adjustment $(L(\\eta_0, t))$.\n",
+        "\n",
+        "In PyTorch, these are called learning rate schedulers, and they take the\n",
+        "optimizer object as an input because they directly alter the learning rate $\\eta$ used within the optimizer object.\n",
+        "\n",
+        "\n",
+        "<img src='https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/inside-deep-learing/05-modern-training-techniques/images/2.png?raw=1' width='600'/>\n",
+        "\n",
+        "We will talk about four approaches to adjusting the learning rate that you should be\n",
+        "aware of. Each of these schedules has different pros and cons.\n",
+        "\n",
+        "* Exponential decay: Smoothing erratic training\n",
+        "* Step drop adjustment: Better smoothing\n",
+        "* Cosine annealing: Greater accuracy but less stability\n",
+        "* Validation plateau: Data-based adjustments"
+      ],
+      "metadata": {
+        "id": "vI0wIa2ehwUB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Exponential decay: Smoothing erratic training"
+      ],
+      "metadata": {
+        "id": "1JELpMUtk423"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The most common but one of the simplest is called an exponential decay rate. The exponential decay rate is a good choice if your model behaves erratically, with loss or accuracy increasing and decreasing by large\n",
+        "amounts. You can use the exponential decay to help stabilize the training and get a more consistent result.\n",
+        "\n",
+        "We pick a value $0 <  \\gamma < 1$ that is multiplied by our learning\n",
+        "rate after every epoch. PyTorch provides this using the torch.optim.lr_scheduler.ExponentialLR class.\n",
+        "\n",
+        "For example, say the initial learning rate is $\\eta_0 = 0.001$, you want the minimum to\n",
+        "be $\\eta_{min} = 0.0001$, and you train for $T = 50$ epochs. You need to set \n",
+        " $\\eta = 0.91201$."
+      ],
+      "metadata": {
+        "id": "_8KioChGk6Eo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "RSbCE0TsmJiO"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
