--- a/pytorch-lightning-in-practice/pytorch-lightning/episode_1_training_classification_model.ipynb
+++ b/pytorch-lightning-in-practice/pytorch-lightning/episode_1_training_classification_model.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "episode-1-training-classification-model.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMAHBZO/pkwutX4y+sYkSC6",
+      "authorship_tag": "ABX9TyOd/NaklMtK2ZaKb17nv74l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +62,7 @@
       "metadata": {
         "id": "-lDJtO-1HklU"
       },
-      "execution_count": 13,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -73,22 +72,22 @@
       ],
       "metadata": {
         "id": "N_JW0mHYUG8k",
-        "outputId": "a057294a-6af2-4a33-a6dd-de2d85d6851a",
+        "outputId": "5425f998-3c62-4652-b2b1-d73ab3d3b099",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([-2.3014, -1.3125, -1.4651,  0.9658, -0.7355], device='cuda:0')"
+              "tensor([-1.4110, -2.0209,  1.9245,  0.7648, -0.4434], device='cuda:0')"
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 17
         }
       ]
     },
@@ -107,7 +106,7 @@
       "metadata": {
         "id": "5EexZ1c1Ht33"
       },
-      "execution_count": 15,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -125,7 +124,7 @@
         "  def forward(self, x):\n",
         "    h1 = nn.functional.relu(self.l1(x))\n",
         "    h2 = nn.functional.relu(self.l2(h1))\n",
-        "    do = self.do(h2 + h1)\n",
+        "    do = self.do(h2 + h1) # resudual connection\n",
         "    logits = self.l3(do)\n",
         "    return logits\n",
         "\n",
@@ -134,7 +133,7 @@
       "metadata": {
         "id": "eKlYN_xBVGzG"
       },
-      "execution_count": 24,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -147,7 +146,7 @@
       "metadata": {
         "id": "3_Hn_N5QOarC"
       },
-      "execution_count": 26,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -159,14 +158,14 @@
       "metadata": {
         "id": "vvemcEy4OoZ6"
       },
-      "execution_count": 27,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# define data loader\n",
-        "train_data = datasets.MNIST(\"data\", train=True, download=False, transform=transforms.ToTensor())\n",
+        "train_data = datasets.MNIST(\"data\", train=True, download=True, transform=transforms.ToTensor())\n",
         "train, val = random_split(train_data, [55000, 5000])\n",
         "\n",
         "train_loader = DataLoader(train, batch_size=32)\n",
@@ -175,7 +174,7 @@
       "metadata": {
         "id": "cZNLTWVDRm7S"
       },
-      "execution_count": 28,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -188,7 +187,7 @@
         "  # training loop\n",
         "  losses = list()\n",
         "  accuracies = list()\n",
-        "  model.train()  # training mode because I use dropout\n",
+        "  model.train()  # set training mode because I use dropout\n",
         "  for batch in train_loader:\n",
         "    x, y = batch\n",
         "\n",
@@ -218,9 +217,9 @@
         "    losses.append(J.item())\n",
         "    accuracies.append(y.eq(l.detach().argmax(dim=1).cpu()).float().mean())\n",
         "\n",
-        "  print(f\"Epoch: {epoch + 1},\", end=\", \")\n",
-        "  print(f\"training loss: {torch.tensor(losses).mean():.2f}\", end=\", \")\n",
-        "  print(f\"training accuracy: {torch.tensor(accuracies).mean():.2f}\")\n",
+        "  print(f\"Epoch: {epoch + 1}\", end=\", \")\n",
+        "  print(f\"training loss: \\t{torch.tensor(losses).mean():.2f}\", end=\", \")\n",
+        "  print(f\"training accuracy: \\t{torch.tensor(accuracies).mean():.2f}\")\n",
         "\n",
         "  # validation loop\n",
         "  losses = list()\n",
@@ -243,33 +242,33 @@
         "    losses.append(J.item())\n",
         "    accuracies.append(y.eq(l.detach().argmax(dim=1).cpu()).float().mean())\n",
         "\n",
-        "  print(f\"Epoch: {epoch + 1},\", end=\", \")\n",
-        "  print(f\"validation loss: {torch.tensor(losses).mean():.2f}\", end=\", \")\n",
-        "  print(f\"training accuracy: {torch.tensor(accuracies).mean():.2f}\")"
+        "  print(f\"Epoch: {epoch + 1}\", end=\", \")\n",
+        "  print(f\"validation loss: \\t{torch.tensor(losses).mean():.2f}\", end=\", \")\n",
+        "  print(f\"training accuracy: \\t{torch.tensor(accuracies).mean():.2f}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rxfHVEvOOs_2",
-        "outputId": "3041e574-1d07-4efd-8d7c-4bf8dd12df91"
+        "outputId": "6545fafd-f734-4fe6-b172-d374678ecd6d"
       },
-      "execution_count": 29,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch: 1,, training loss: 0.86, training accuracy: 0.77\n",
-            "Epoch: 1,, validation loss: 0.42, training accuracy: 0.89\n",
-            "Epoch: 2,, training loss: 0.38, training accuracy: 0.89\n",
-            "Epoch: 2,, validation loss: 0.33, training accuracy: 0.91\n",
-            "Epoch: 3,, training loss: 0.31, training accuracy: 0.91\n",
-            "Epoch: 3,, validation loss: 0.28, training accuracy: 0.92\n",
-            "Epoch: 4,, training loss: 0.27, training accuracy: 0.92\n",
-            "Epoch: 4,, validation loss: 0.25, training accuracy: 0.93\n",
-            "Epoch: 5,, training loss: 0.24, training accuracy: 0.93\n",
-            "Epoch: 5,, validation loss: 0.22, training accuracy: 0.93\n"
+            "Epoch: 1, training loss: \t0.83, training accuracy: \t0.78\n",
+            "Epoch: 1, validation loss: \t0.43, training accuracy: \t0.88\n",
+            "Epoch: 2, training loss: \t0.37, training accuracy: \t0.89\n",
+            "Epoch: 2, validation loss: \t0.33, training accuracy: \t0.90\n",
+            "Epoch: 3, training loss: \t0.31, training accuracy: \t0.91\n",
+            "Epoch: 3, validation loss: \t0.29, training accuracy: \t0.91\n",
+            "Epoch: 4, training loss: \t0.27, training accuracy: \t0.92\n",
+            "Epoch: 4, validation loss: \t0.26, training accuracy: \t0.92\n",
+            "Epoch: 5, training loss: \t0.24, training accuracy: \t0.93\n",
+            "Epoch: 5, validation loss: \t0.23, training accuracy: \t0.93\n"
           ]
         }
       ]
