--- a/pytorch-lightning-in-practice/pytorch-lightning/episode_2_interactive_neural_network_debugging.ipynb
+++ b/pytorch-lightning-in-practice/pytorch-lightning/episode_2_interactive_neural_network_debugging.ipynb
@@ -6,7 +6,7 @@
       "name": "episode-2-interactive-neural-network-debugging.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNwyLVx5OEtYwK+8JUepggf",
+      "authorship_tag": "ABX9TyPB1in+5COVxGlBAkYHtQ8C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,7 +80,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "5EexZ1c1Ht33"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +137,7 @@
       "metadata": {
         "id": "eKlYN_xBVGzG"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +150,7 @@
       "metadata": {
         "id": "3_Hn_N5QOarC"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -162,7 +162,7 @@
       "metadata": {
         "id": "vvemcEy4OoZ6"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -178,7 +178,7 @@
       "metadata": {
         "id": "cZNLTWVDRm7S"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,7 +258,7 @@
         "id": "rxfHVEvOOs_2",
         "outputId": "f1923115-7476-45c1-8127-2dd199128606"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,6 +287,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Debugging the accuracy"
+      ],
+      "metadata": {
+        "id": "JEvyTvRCIvhh"
+      }
     },
     {
       "cell_type": "markdown",
