--- a/nyu-deep-learning-2020/03_spiral_classification.ipynb
+++ b/nyu-deep-learning-2020/03_spiral_classification.ipynb
@@ -6,7 +6,7 @@
       "name": "03-spiral-classification.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP9LcUduFwLiH4tdS7dmPVF",
+      "authorship_tag": "ABX9TyOmeIYjlmkc8cpLwJ/g17lc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -253,7 +253,7 @@
         "\n",
         "`nn.Sequential()` is a container, which passes modules to the constructor in the order that they are added.\n",
         "\n",
-        "`nn.linear()` is miss-named as it applies an affine transformation to the incoming data: $\\boldsymbol y =Wx+b$.\n",
+        "`nn.linear()` is miss-named as it applies an affine transformation to the incoming data: $\\boldsymbol y =Wx+b$(Here, we are doing scaling and translation).\n",
         "\n"
       ],
       "metadata": {
@@ -310,10 +310,10 @@
       ],
       "metadata": {
         "id": "sYjlvoopLOqT",
-        "outputId": "f7193cf2-5c8e-4a66-b492-82411cff90f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f7193cf2-5c8e-4a66-b492-82411cff90f9"
       },
       "execution_count": 9,
       "outputs": [
@@ -334,12 +334,12 @@
         "plot_model(X, y, model)"
       ],
       "metadata": {
-        "id": "bLnQJb_g1xMa",
-        "outputId": "c1f50a29-9498-48b4-a6f8-cfd6adba535e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 861
-        }
+        },
+        "id": "bLnQJb_g1xMa",
+        "outputId": "c1f50a29-9498-48b4-a6f8-cfd6adba535e"
       },
       "execution_count": 10,
       "outputs": [
@@ -433,10 +433,10 @@
       ],
       "metadata": {
         "id": "zBtnGKCYKPWk",
-        "outputId": "5e57970a-56ca-4e1d-b31f-1f5874f08537",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5e57970a-56ca-4e1d-b31f-1f5874f08537"
       },
       "execution_count": 11,
       "outputs": [
@@ -458,11 +458,11 @@
       ],
       "metadata": {
         "id": "-u8tJTyieGoQ",
-        "outputId": "3c6b5139-763e-4fe6-9488-3e6759219ba4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 879
-        }
+        },
+        "outputId": "3c6b5139-763e-4fe6-9488-3e6759219ba4"
       },
       "execution_count": 12,
       "outputs": [
