--- a/math-and-architectures-of-deep-learning/introduction-to-vectors-matrices-and-tensors/03_orthogonal_matrices.ipynb
+++ b/math-and-architectures-of-deep-learning/introduction-to-vectors-matrices-and-tensors/03_orthogonal_matrices.ipynb
@@ -6,7 +6,7 @@
       "name": "03-orthogonal-matrices.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPK5ETIhtZ3llTmXIsyMGmQ",
+      "authorship_tag": "ABX9TyMiLJJ/Qfa7eceOsiygLGmA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -177,15 +177,28 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Setup"
+      ],
+      "metadata": {
+        "id": "n7gMjVAehJdX"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "import torch\n",
+        "\n",
         "import numpy as np\n",
-        "import torch"
+        "import math\n",
+        "from math import cos, sin, radians\n",
+        "import matplotlib.pyplot as plt"
       ],
       "metadata": {
         "id": "JsRgdABiFg4F"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -198,15 +211,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fGUvrmiKFj8v",
-        "outputId": "5028349a-a899-4e9e-ea22-e9411b978268"
+        "outputId": "fdddcfdd-d9a6-404c-e38c-a7f42aa63695"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x7fd655359a70>"
+              "<torch._C.Generator at 0x7faad536fa70>"
             ]
           },
           "metadata": {},
@@ -217,20 +230,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Let us revisit our cat brain data set.\n",
-        "\n",
-        "Notice that there are 15 training examples, with 3 unkwnowns (w0, w1, b).\n",
-        "This is an over determined system.\n",
-        "\n",
-        "It can be easily seen that the solution is roughly\n",
-        "$w_{0} = 1, w_{1} = 1, b = -1$.\n",
-        "\n",
-        "It has been deliberately chosen as such.\n",
-        "But the equations are not fully consistent (i.e., there is\n",
-        " no solution that satisfies all the equations).\n",
-        " \n",
-        "We want to find the best values such that it minimizes $Aw - b$.\n",
-        "This is what the pseudo-inverse does."
+        "##Rotation matrix"
+      ],
+      "metadata": {
+        "id": "Eh1WCaxPhVtu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let us create rotation matrix by angle $\\theta$ in 2D and 3D space."
       ],
       "metadata": {
         "id": "Gtqw_3h5EnCR"
@@ -239,52 +248,252 @@
     {
       "cell_type": "code",
       "source": [
-        "def pseudo_inverse(A):\n",
-        "  return torch.matmul(torch.linalg.inv(torch.matmul(A.T, A)), A.T)"
+        "def rotation_matrix_2d(theta):\n",
+        "  \"\"\"\n",
+        "  Returns the matrix that performs in-plane 2D rotation by angle theta about origin.\n",
+        "  Thus, multiplication with this matrix moves a point to a new location.\n",
+        "  Angle between the position vectors of original and new point is theta\n",
+        "  \"\"\"\n",
+        "  return torch.tensor([\n",
+        "    [cos(radians(theta)), -sin(radians(theta))],\n",
+        "    [sin(radians(theta)), cos(radians(theta))]\n",
+        "  ])\n",
+        "\n",
+        "def rotation_matrix_3d(theta, axis):\n",
+        "  \"\"\"\n",
+        "  Returns the matrix that will rotate a point in 3D space about the chosen axis by angle theta degrees.\n",
+        "  Axis of rotation, can be 0, 1 or 2 corresponding to x, y or z axis respectively.\n",
+        "  \"\"\"\n",
+        "  if axis == 0:\n",
+        "    return torch.tensor([\n",
+        "      [1, 0, 0],\n",
+        "      [0, cos(radians(theta)), -sin(radians(theta))],\n",
+        "      [0, sin(radians(theta)), cos(radians(theta))]\n",
+        "    ])\n",
+        "  if axis == 1:\n",
+        "    return torch.tensor([\n",
+        "      [cos(radians(theta)), 0, -sin(radians(theta))],\n",
+        "      [0, 1, 0],\n",
+        "      [sin(radians(theta)), 0, cos(radians(theta))]\n",
+        "    ])\n",
+        "  if axis == 2:\n",
+        "    return torch.tensor([\n",
+        "      [cos(radians(theta)), -sin(radians(theta)), 0],\n",
+        "      [sin(radians(theta)), cos(radians(theta)), 0],\n",
+        "      [0, 0, 1],\n",
+        "    ])"
       ],
       "metadata": {
         "id": "2F-RWUsoFoqT"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let us consider the vector `[1, 0, 0]`"
+      ],
+      "metadata": {
+        "id": "pVk782IMkIrl"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "# The usual cat-brain input dataset\n",
-        "X = torch.tensor([\n",
-        "  [0.11, 0.09], [0.01, 0.02], [0.98, 0.91], [0.12, 0.21],\n",
-        "  [0.98, 0.99], [0.85, 0.87], [0.03, 0.14], [0.55, 0.45],\n",
-        "  [0.49, 0.51], [0.99, 0.01], [0.02, 0.89], [0.31, 0.47],\n",
-        "  [0.55, 0.29], [0.87, 0.76], [0.63, 0.24]\n",
-        "])\n",
+        "u = torch.tensor([1, 0, 0], dtype=torch.float)\n",
+        "# Reshape it to represent a row vector\n",
+        "u = u.reshape((3, 1))\n",
+        "print(f\"Original vector: \\n{u}\\n\")\n",
         "\n",
-        "# Output threat score modeled as a vector\n",
-        "y = torch.tensor([-0.8, -0.97, 0.89, -0.67, 0.97, 0.72, -0.83, 0.00, 0.00, 0.00, -0.09, -0.22, -0.16, 0.63, 0.37])\n",
-        "# Column stack will add an additional column of 1s to the training dataset to represent the coefficient of the bias\n",
-        "A = torch.column_stack((X, torch.ones(15)))  # A is the augmented data matrix\n",
+        "# Rotate it by 30 degrees around Z Axis\n",
+        "angle_of_rotation = 30.0\n",
+        "R = rotation_matrix_3d(angle_of_rotation, 2)\n",
+        "print(f\"Rotation matrix for {angle_of_rotation} degrees around Z Axis is:\\n{R}\\n\")\n",
         "\n",
-        "# Pseudo-inverse finds the ”best fit” solution - minimizes total error for all the equations\n",
-        "w = torch.matmul(pseudo_inverse(A), y)\n",
-        "# Expect the solution to be close to [1, 1, -1]\n",
-        "print(f\"The solution is {w}\\nNote that this is almost equal to [1.0, 1.0, -1.0])\")"
+        "v = torch.matmul(R, u)\n",
+        "print(f\"Vector after rotation:\\n{v}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vrnIgp6bUijG",
-        "outputId": "0386e7d6-32d2-40a2-94c2-d7af76ac9cd5"
+        "outputId": "f2eb0077-b2ff-48c6-a182-ec7406d6c065"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The solution is tensor([ 1.0766,  0.8976, -0.9582])\n",
-            "Note that this is almost equal to [1.0, 1.0, -1.0])\n"
+            "Original vector: \n",
+            "tensor([[1.],\n",
+            "        [0.],\n",
+            "        [0.]])\n",
+            "\n",
+            "Rotation matrix for 30.0 degrees around Z Axis is\n",
+            "tensor([[ 0.8660, -0.5000,  0.0000],\n",
+            "        [ 0.5000,  0.8660,  0.0000],\n",
+            "        [ 0.0000,  0.0000,  1.0000]])\n",
+            "\n",
+            "Vector after rotation\n",
+            "tensor([[0.8660],\n",
+            "        [0.5000],\n",
+            "        [0.0000]])\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's computes angle between two vectors."
+      ],
+      "metadata": {
+        "id": "gofaydHqnZUC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_angle(u, v):\n",
+        "  \"\"\"\n",
+        "  Computes angle between two vectors using arc cosine\n",
+        "  \"\"\"\n",
+        "  u = torch.squeeze(u)\n",
+        "  v = torch.squeeze(v)\n",
+        "  assert len(u.shape) == 1 and len(v.shape) == 1\n",
+        "\n",
+        "  return math.degrees(math.acos((torch.dot(u, v) / torch.linalg.norm(u) * torch.linalg.norm(v))))"
+      ],
+      "metadata": {
+        "id": "fLUm7vSznchk"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Angle between u and v\n",
+        "angle_u_v = get_angle(u, v)\n",
+        "print(f\"Angle between the two vectors {angle_u_v}\")\n",
+        "assert np.allclose(angle_u_v, angle_of_rotation)"
+      ],
+      "metadata": {
+        "id": "vwSP8m2LoKlr",
+        "outputId": "023cded4-edfa-4adf-c389-0615768a5626",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Angle between the two vectors 30.000001781168113\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's apply rotation matrices."
+      ],
+      "metadata": {
+        "id": "7i7DxBI6o2r2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "u = np.array([1, 1, 1])\n",
+        "\n",
+        "# apply rotation 45 about Z-axis\n",
+        "r3dz = rotation_matrix_3d(45, 2)\n",
+        "v = np.matmul(r3dz, u)\n",
+        "v"
+      ],
+      "metadata": {
+        "id": "8AXYSHyyo5JF",
+        "outputId": "070a8851-09e1-4641-e805-ba889537b6a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0.0000, 1.4142, 1.0000], dtype=torch.float64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# apply rotation 45 about X-axis\n",
+        "r3dz = rotation_matrix_3d(45, 0)\n",
+        "v = np.matmul(r3dz, u)\n",
+        "v"
+      ],
+      "metadata": {
+        "id": "oGWKDEFDpgOR",
+        "outputId": "d708e93a-4b7d-4c6a-d12d-d4ccee6f2f77",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1.0000, 0.0000, 1.4142], dtype=torch.float64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# apply rotation 45 about Y-axis\n",
+        "r3dz = rotation_matrix_3d(45, 1)\n",
+        "v = np.matmul(r3dz, u)\n",
+        "v"
+      ],
+      "metadata": {
+        "id": "4CDBicKypmSB",
+        "outputId": "a6adf1b1-356e-4660-927f-2e1969d4fb98",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0.0000, 1.0000, 1.4142], dtype=torch.float64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     }
